...
      }
    },
    "Add Items" : {
      "localizations" : {
        "ja" : {
...
      }
    },
    "Address" : {
      "localizations" : {
        "ja" : {
...
      }
    },
    "All Shortcut Actions" : {
      "localizations" : {
        "ja" : {
...
      }
    },
    "Annotation" : {
      "localizations" : {
        "ja" : {
...
      }
    },
    "Cancel" : {
      "localizations" : {
        "ja" : {
...
      }
    },
    "Connection" : {
      "localizations" : {
        "ja" : {
...
      }
    },
    "Connection Required" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "接続先が必要です"
          }
        }
      }
    },
    "Connections" : {
      "localizations" : {
        "ja" : {
...
      }
    },
    "Discard Changes" : {
      "localizations" : {
        "ja" : {
...
      }
    },
    "Discard Changes?" : {
      "localizations" : {
        "ja" : {
...
      }
    },
    "Edit Connection" : {
      "localizations" : {
        "ja" : {
...
      }
    },
    "Folders" : {
      "localizations" : {
        "ja" : {
...
      }
    },
    "Hide API token" : {
      "localizations" : {
        "ja" : {
...
      }
    },
    "Information" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "情報"
          }
        }
...
      }
    },
    "Keep Editing" : {
      "localizations" : {
        "ja" : {
...
      }
    },
    "Metadata" : {
      "localizations" : {
        "ja" : {
...
      }
    },
    "New Connection" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "新しい接続先"
          }
        }
...
      }
    },
    "No Connections" : {
      "localizations" : {
        "ja" : {
...
      }
    },
    "No items yet" : {
      "localizations" : {
        "ja" : {
...
      }
    },
    "Not Now" : {
      "localizations" : {
        "ja" : {
...
      }
    },
    "Privacy Policy" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "プライバシーポリシー"
          }
        }
...
      }
    },
    "Restore Purchases" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "購入を復元"
          }
        }
      }
    },
    "Save" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "保存"
          }
        }
...
      }
    },
    "Show API token" : {
      "localizations" : {
        "ja" : {
...
      }
    },
    "Tags" : {
      "localizations" : {
        "ja" : {
...
      }
    },
    "Test Connection" : {
      "localizations" : {
        "ja" : {
...
      }
    },
    "Unlimited Connections" : {
      "localizations" : {
        "ja" : {
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "送信リスト"
          }
        }
...
      }
    },
    "Use HTTPS" : {
      "localizations" : {
        "ja" : {
...
      }
    },
    "Use HTTPS?" : {
      "localizations" : {
        "ja" : {
...
